# databricks-llm-wiki

./: .gitignore  CLAUDE.md  Makefile  README.md  app.yaml  databricks.yaml  pyproject.toml  requirements.txt  wiki_config.yaml
notebooks/: compile_pages.py  setup_infrastructure.py  sync.py
resources/: app.yaml  catalog.yaml  jobs.yaml  pipeline.yaml
sample_data/: foundation-model-api.md  llm-wiki-pattern.md  obsidian-knowledge-management.md  retrieval-augmented-generation.md  spark-declarative-pipelines.md  unity-catalog.md  vector-databases.md
sample_data/tolkien/: frodo-baggins.md  gandalf.md  gollum.md  middle-earth.md  mordor.md  rings-of-power.md  samwise-gamgee.md  sauron.md  the-one-ring.md  the-shire.md
scripts/: create_vector_search.py  seed_queue.sh  sync_pdfs.sh  sync_to_lakebase.py  test_mcp.py
src/llm_wiki/: __init__.py  config.py  log.py  models.py  search.py  sync.py
src/llm_wiki/app/: __init__.py  routes.py  server.py  tools.py
src/llm_wiki/app/static/: graph.js  style.css  wiki.js
src/llm_wiki/app/templates/: base.html  edit.html  graph.html  home.html  page.html  search.html
src/llm_wiki/compiler/: __init__.py  context.py  engine.py  frontmatter.py  prompts.py
src/llm_wiki/operations/: __init__.py  ingest.py  lint.py  query.py
src/llm_wiki/pipeline/: __init__.py  bronze.py  gold.py  silver.py
src/llm_wiki/storage/: __init__.py  delta.py  lakebase.py  volumes.py
tests/: test_config.py  test_frontmatter.py  test_models.py  test_search.py
